--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.1",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.2",
+    "framer-motion": "^6.3.3",
     "next": "12.1.0",
     "postcss-import": "^14.1.0",
     "react": "17.0.2",
